Added comments for javascript

--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -110,7 +110,7 @@
 		  				desired4.push(p4d);
 		  			});
 
-		  			//A for loop that goes through each of the student's offers, matches it with their desired course, and displays this in a grid 
+		  			//For loop that goes through each of the student's offers, matches it with their desired course, and displays this in a grid 
 		  			var i;
 					for (i = 0; i < students.length; i++) {
 						noOffering = false;
