--- a/HTML/about.html
+++ b/HTML/about.html
@@ -41,6 +41,12 @@
 						<p> As fellow students who too have suffered through this flaw in picking courses, our goal is to make the already 
 							stressful lives of students easier by making an effort to help students get out of classes they don't want and get into 
 							classes they do want</p>
+						<p> Some of our next goals include: </p>
+						<li>
+							<ul> Upgrading our matching system to include three people </ul>
+							<ul> Improving the layout of our website to increase the aesthetics </ul>
+							<ul> Installing in security measures to protect information from being misused </ul>
+						</li>
 					</td>
 				</tr>
 			</table>
