--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,5 +12,25 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
+		<br> 
+		<br> 
+		<div align = "center">
+			<table width = "1200" id = "about">
+				<tr align = "center" id = "about">
+					<td id = "about"> 
+					<h1> Have any questions or concerns ? </h1>
+					</td>
+				</tr>
+				<tr id = "about">
+					<td colspan = "2" width = "3000" id = "about"> 
+					<p align = "center"> Image of logo goes here </p>
+					</td>
+					<td id = "about"> 
+						<p> You can reach out to us at: </p>
+						<p> three-sliced-oranges@gmail.com </p>
+					</td>
+				</tr>
+			</table>
+
 	</body>
 </html>
