--- a/HTML/about.html
+++ b/HTML/about.html
@@ -22,12 +22,12 @@
 					</td>
 				</tr>
 				<tr id = "about">
-					<td colspan = "2" width = "3000" id = "about"> 
+					<td colspan = "2" width = "3500" id = "about"> 
 					<p align = "center"> Image of logo goes here </p>
 					</td>
 					<td id = "about"> 
-						<p align = "center" id = "cool3"> Our team is comprised of three people, A.S.K: </p>
-						<p align = "center" id = "cool3"> Aleena, Shantanu and Kelly </p>
+						<h2 align = "center" id = "cool3"> Our team is comprised of three people, A.S.K: </h2>
+						<h2 align = "center" id = "cool3"> Aleena, Shantanu and Kelly </h2>
 						<br> 
 						<p id = "cool2"> CourseTown is website designed for students struggling with the arrangemnt of their schedule </p>
 						<p id = "cool2"> As a semester starts, for students, their is an everlasting problem in getting the courses they want. 
@@ -35,9 +35,9 @@
 							the courses they want and being put in a class they do not want with no way of switching out. Through some 
 							organization, it can be seen that some students can get into the class they want by switching courses with 
 							another student. </p>
-						<p id = "cool2"> For example. A has geography and B has business. A wants to switch into business but the class is full. B wants
-							to switch into geography but that class is full too. However if both A and B switch courses with each other
-							they are able to get into the classes they want </p>
+						<p id = "cool2"> For example, student A has geography and student B has business. A wants to switch into business 
+							but the class is full. B wants to switch into geography but that class is full too. However if both A and
+							B switch courses with each other they are able to get into the classes they want </p>
 						<p id = "cool2"> As fellow students who too have suffered through this flaw in picking courses, our goal is to make the already 
 							stressful lives of students easier by making an effort to help students get out of classes they don't want and get into 
 							classes they do want</p>
