--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,21 +29,28 @@
 						<h2 align = "center" id = "cool3"> Our team is comprised of three people, A.S.K: </h2>
 						<h2 align = "center" id = "cool3"> Aleena, Shantanu and Kelly </h2>
 						<br> 
-						<p id = "cool2"> CourseTown is website designed for students struggling with the arrangemnt of their schedule </p>
-						<p id = "cool2"> As a semester starts, for students, their is an everlasting problem in getting the courses they want. 
-							However classes have a maximum number of students admitted, which results in some students not getting
+						<p id = "cool2"> 
+							CourseTown is website designed for students struggling with the arrangment of their schedule 
+						</p>
+						<p id = "cool2"> 
+							As a semester starts, for students, there is an everlasting problem in getting the courses they want. However classes have a maximum number of students admitted, which results in some students not getting
 							the courses they want and being put in a class they do not want with no way of switching out. Through some 
 							organization, it can be seen that some students can get into the class they want by switching courses with 
-							another student. </p>
+							another student. 
+						</p>
 						<p id = "cool2"> For example, student A has geography and student B has business. A wants to switch into business 
 							but the class is full. B wants to switch into geography but that class is full too. However if both A and
-							B switch courses with each other they are able to get into the classes they want </p>
-						<p id = "cool2"> As fellow students who too have suffered through this flaw in picking courses, our goal is to make the already 
-							stressful lives of students easier by making an effort to help students get out of classes they don't want and get into 
-							classes they do want</p>
-						<p id = "cool2"> Some of our next goals include: </p>
+							B switch courses with each other they are able to get into the classes they want 
+						</p>
+						<p id = "cool2"> 
+							As fellow students who too have suffered through this flaw in picking courses, our goal is to make the already 
+							stressful lives of students easier by making an effort to help students get out of classes they don't want and get into classes they do want
+						</p>
+						<p id = "cool2"> 
+							Some of our next goals include: 
+						</p>
 						<ul id = "cool2">
-							<li> Upgrading our matching system to include three people </li>
+							<li> Upgrading our matching system to include more than two people </li>
 							<li> Improving the layout of our website to increase the aesthetics </li>
 							<li> Installing in security measures to protect information from being misused </li>
 						</ul>
