Changed my profile table colour

--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -20,7 +20,7 @@
 		<br>
 		<br>
 		<div align="center">
-			<table width =1200>
+			<table id="profileTable" width =1200>
 				<tr align = "center">
 					<th><h1>Personal</h1></th>
 					<th><h1>Your Schedule </h1></th>
