Cleaned up css for tables

--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -20,9 +20,9 @@
 				<col width = 385>
 				<col width = 485>
 				<tr align = "center">
-					<th id="matchesBg"><h1 id="matchesHeading">Personal</h1></th>
-					<th id="matchesBg"><h1 id="matchesHeading">Select Period</h1></th>
-					<th id="matchesBg"><h1 id="matchesHeading">Match</h1></th>
+					<th><h1>Personal</h1></th>
+					<th><h1>Select Period</h1></th>
+					<th><h1>Match</h1></th>
 				</tr>
 				<tr align = "center">
 					<td> 
