Added clearer instructions for profile page

--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -68,15 +68,16 @@
 					<td>
 						<br>
 						<button onclick="submitSchedule()">Submit</button>
-						<p> Please fill in according to your day 1 schedule. </p>
+						<p> Fill in according to your day 1 schedule. </p>
 					</td>
 					<td colspan = "2">
 						<br>
 						<button onclick="submitOffer()">Submit</button>
-						<p> You must offer and desire one course for the same period. </p>
+						<p> You must offer and desire <u>one</u> course for the <u>same</u> period. </p>
 					</td>
 				</tr>
-			</table> 	
+			</table>
+			<p id="profileNote"> *Please only input course codes or "STUDY". </p>
 		</div>
 		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
 		<script>
