--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<ul id="navbar">
+			<img src="../IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
 			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
@@ -12,6 +13,7 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
+
 		<center><p id="special"> "One man's trash is another man's treasure." -Yotam Ottolenghi</p></center>
 	</body>
 </html>
