Added some town image (for fun idk if you guys like it)

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -14,6 +14,10 @@
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
 
-		<center><p id="special"> "One man's trash is another man's treasure." -Yotam Ottolenghi</p></center>
+		<div align="center">
+			<img src="../IMAGES/town.png" id="town">
+			<p id="special"> "One man's trash is another man's treasure." -Yotam Ottolenghi</p>
+			<p> LOL HOW DO YOU FEEL ABOUT THIS OR NAHHH idk i just found it and idk how to feel </p>
+		</div>
 	</body>
 </html>
