--- a/HTML/explore.html
+++ b/HTML/explore.html
@@ -101,7 +101,7 @@
 		  			//For loop that goes through all of the courses available for period 1 and adds it to the table created in html
 		  			var i;
 			  		for (i = 0; i < period1.length; i++) {
-			  			var rows = i + 2;
+			  			var rows = i + 2;                    //rowspan is initially 2, and increases by 1 as each course is added 
 			  			document.getElementById("row1").innerHTML = "<td id=\"periodbg\" width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1 id=\"period\">Period 1</h1></td>";
 			  			document.getElementById("row1").innerHTML += "<td id=\"courseCodebg\" align=\"center\"><h3 id=\"courseCode\">Course Code</h3></td>";
 			  			document.getElementById("Period1").innerHTML += "<tr><td id=\"courses\" align=\"center\">" + period1[i] + "</td></tr>";
