--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<ul id="navbar">
-			<img src="../IMAGES/logo3.png" id="logo">
+			<img src="../IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
 			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
