--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -6,7 +6,7 @@
 	<body>
 
 		<ul id="navbar">
-			<img src="../IMAGES/logo2.png" id="logo">
+			<img src="../IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
 			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
