Added logo 2 on about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -24,7 +24,7 @@
 				</tr>
 				<tr id = "about">
 					<td colspan = "2" width = "3500" id = "about"> 
-					<p align = "center"> Image of logo goes here </p>
+					<img src="../IMAGES/logo2.png" width=600px >
 					</td>
 					<td id = "about"> 
 						<h2 align = "center" id = "cool3"> Our team is comprised of three people, A.S.K: </h2>
