added logo on contact

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -13,8 +13,7 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
-		<br> 
-		<br> 
+		
 		<div align = "center">
 			<table width = "1200" id = "about">
 				<tr align = "center" id = "about">
@@ -24,11 +23,11 @@
 				</tr>
 				<tr id = "about">
 					<td colspan = "2" width = "2" id = "about"> 
-					<p align = "center"> Image of logo goes here </p>
+					<p align = "center"><img src="../IMAGES/ASK.png" width="750"></p>
 					</td>
 					<td id = "about"> 
 						<p> You can reach out to us at: </p>
-						<p> three-sliced-oranges@gmail.com </p>
+						<p> threeslicedoranges@gmail.com </p>
 					</td>
 				</tr>
 			</table>
