--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../CSS/style.css"/>
+		<title> CourseTown | My Profile</title>
 	</head>
 	<body>
 		<ul id="navbar">
