add rows comment back

--- a/HTML/explore.html
+++ b/HTML/explore.html
@@ -91,14 +91,16 @@
 		  					period4.push(p4);
 		  				}
 		  			});	
+
 		  			//For loop that goes through all of the courses available for period 1 and adds it to the table created in html
 		  			var i;
 			  		for (i = 0; i < period1.length; i++) {
-			  			var rows = i + 2;
+			  			var rows = i + 2;                    //rowspan is initially 2, and increases by 1 as each course is added 
 			  			document.getElementById("row1").innerHTML = "<td id=\"periodbg\" width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1 id=\"period\">Period 1</h1></td>";
 			  			document.getElementById("row1").innerHTML += "<td id=\"courseCodebg\" align=\"center\"><h3 id=\"courseCode\">Course Code</h3></td>";
 			  			document.getElementById("Period1").innerHTML += "<tr><td id=\"courses\" align=\"center\">" + period1[i] + "</td></tr>";
 			  		}
+
 			  		//Same code as above except for period 2 table 
 			  		var i;
 			  		for (i = 0; i < period2.length; i++) {
@@ -107,6 +109,7 @@
 			  			document.getElementById("row2").innerHTML += "<td id=\"courseCodebg\" align=\"center\"><h3 id=\"courseCode\">Course Code</h3></td>";
 			  			document.getElementById("Period2").innerHTML += "<tr><td id=\"courses\" align=\"center\">" + period2[i] + "</td></tr>";
 			  		}
+
 			  		//Same code as above except for period 3 table 
 			  		var i;
 			  		for (i = 0; i < period3.length; i++) {
@@ -115,6 +118,7 @@
 			  			document.getElementById("row3").innerHTML += "<td id=\"courseCodebg\" align=\"center\"><h3 id=\"courseCode\">Course Code</h3></td>";
 			  			document.getElementById("Period3").innerHTML += "<tr><td id=\"courses\" align=\"center\">" + period3[i] + "</td></tr>";
 			  		}
+			  		
 			  		//Same code as above except for period 4 table 
 			  		var i;
 			  		for (i = 0; i < period4.length; i++) {
