fixed spacing of table without breaks

--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -51,7 +51,7 @@
 			<p id=nomatch> </p>
 		</div>
 
-		<div id = "explore" class="grid-container">
+		<div id ="explore" class="grid-container">
 		</div>
 		
 		
@@ -220,7 +220,7 @@
 						  			}
 						  		}
 						  		for (i = 0; i < offermatch.length; i++) {
-						  			document.getElementById("explore").innerHTML += "<div class=\"grid-item\">" + students[offermatch[i]] + period + "<br><br>Offered: " + offered3[offermatch[i]] + "<br>Desired: " + desired3[offermatch[i]] + "</div>";
+						  			document.getElementById("explore").innerHTML = "<div class=\"grid-item\">" + students[offermatch[i]] + period + "<br><br>Offered: " + offered3[offermatch[i]] + "<br>Desired: " + desired3[offermatch[i]] + "</div>";
 						  		}
 					  		}
 
