Fixed up matches (matches are now mutual for both lol oops)

--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -178,12 +178,13 @@
 		  					//Finds student's desired course 
 		  					if (period == 1) {
 		  						desired = snapshot.child("Desired/Period_1").val();
+		  						offered = snapshot.child("Offered/Period_1").val();
 		  						period = " (Period 1)";
 
 		  						//For loop that searces through list of offerings for period 1 and pushes offers that match to a new list 
 			  					var i;
 						  		for (i = 0; i < offered1.length; i++) {
-						  			if (offered1[i] != "" && offered1[i] == desired) {
+						  			if (offered1[i] != "" && offered1[i] == desired && desired1[i] == offered) {
 						  				offermatch.push(i);
 						  			}
 						  		}
@@ -197,10 +198,11 @@
 					  		//Same code as above except for period 2 matching 
 					  		else if (period == 2) {
 					  			desired = snapshot.child("Desired/Period_2").val();
+					  			offered = snapshot.child("Offered/Period_2").val();
 					  			period = " (Period 2)";
 			  					var i;
 						  		for (i = 0; i < offered2.length; i++) {
-						  			if (offered2[i] != "" && offered2[i] == desired ) {
+						  			if (offered2[i] != "" && offered2[i] == desired && desired2[i] == offered) {
 						  				offermatch.push(i);
 						  			}
 						  		}
@@ -212,25 +214,27 @@
 					  		//Same code as above except for period 3 matching 
 					  		else if (period == 3) {
 					  			desired = snapshot.child("Desired/Period_3").val();
+					  			offered = snapshot.child("Offered/Period_3").val();
 					  			period = " (Period 3)";
 			  					var i;
 						  		for (i = 0; i < offered3.length; i++) {
-						  			if (offered3[i] != "" && offered3[i] == desired) {
+						  			if (offered3[i] != "" && offered3[i] == desired && desired3[i] == offered) {
 						  				offermatch.push(i);
 						  			}
 						  		}
 						  		for (i = 0; i < offermatch.length; i++) {
-						  			document.getElementById("explore").innerHTML = "<div class=\"grid-item\">" + students[offermatch[i]] + period + "<br><br>Offered: " + offered3[offermatch[i]] + "<br>Desired: " + desired3[offermatch[i]] + "</div>";
+						  			document.getElementById("explore").innerHTML += "<div class=\"grid-item\">" + students[offermatch[i]] + period + "<br><br>Offered: " + offered3[offermatch[i]] + "<br>Desired: " + desired3[offermatch[i]] + "</div>";
 						  		}
 					  		}
 
 					  		//Same code as above except for period 4 matching 
 					  		else if (period == 4) {
 					  			desired = snapshot.child("Desired/Period_4").val();
+					  			offered = snapshot.child("Offered/Period_4").val();
 					  			period = " (Period 4)";
 			  					var i;
 						  		for (i = 0; i < offered4.length; i++) {
-						  			if (offered4[i] != "" && offered4[i] == desired) {
+						  			if (offered4[i] != "" && offered4[i] == desired && desired4[i] == offered) {
 						  				offermatch.push(i);
 						  			}
 						  		}
