--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,7 +12,7 @@
 			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
 			<li id="navbarlist"><a href="myprofile.html">My Profile</a> </li>
 			<li id="navbarlist"><a href="about.html">About</a> </li>
-			<li id="navbarlist"><a href="home.html">Home</a> </li>
+			<li id="navbarlist"><a href="../index.html">Home</a> </li>
 		</ul>
 		<br> 
 		<br> 
