--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<ul id="navbar">
-			<img src="../IMAGES/logo.png" id="logo">
+			<img src="IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="HTML/contact.html">Contact</a> </li>
 			<li id="navbarlist"><a href="HTML/Matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="HTML/explore.html">Explore</a> </li>
