--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<ul id="navbar">
 			<img src="IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="HTML/contact.html">Contact</a> </li>
-			<li id="navbarlist"><a href="HTML/Matches.html">Matches</a> </li>
+			<li id="navbarlist"><a href="HTML/matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="HTML/explore.html">Explore</a> </li>
 			<li id="navbarlist"><a href="HTML/myprofile.html">My Profile</a> </li>
 			<li id="navbarlist"><a href="HTML/about.html">About</a> </li>
