--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -8,7 +8,7 @@
 		<ul id="navbar">
 			<img src="../IMAGES/logo.png" id="logo">
 			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
-			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
+			<li id="navbarlist"><a href="matches.html">Matches</a> </li>
 			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
 			<li id="navbarlist"><a href="myprofile.html">My Profile</a> </li>
 			<li id="navbarlist"><a href="about.html">About</a> </li>
